--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.14.1",
     "less-middleware": "^2.2.1",
     "morgan": "~1.7.0",
-    "mysql": "^2.15.0",
-    "serve-favicon": "~2.3.2"
+    "mysql": "*",
+    "serve-favicon": "~2.3.0"
   }
 }
